[gd_scene load_steps=5 format=3 uid="uid://bso2227hcweii"]

[ext_resource type="Script" path="res://fix_tilemap_tool.gd" id="1_jb41i"]
[ext_resource type="TileSet" uid="uid://b2fmxt6xo787g" path="res://tiles/tileset3.tres" id="2_84uv6"]
[ext_resource type="TileSet" uid="uid://dila20svsy5ke" path="res://tiles/tileset.tres" id="2_mi4wk"]
[ext_resource type="PackedScene" uid="uid://c6glfm0fwaos8" path="res://main_camera.tscn" id="4_hlpi1"]

[node name="FixTilemapTool" type="CanvasLayer"]
script = ExtResource("1_jb41i")
old_tileset = ExtResource("2_mi4wk")
new_tileset = ExtResource("2_84uv6")

[node name="TilemapSelector" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 340.0
offset_bottom = 160.0

[node name="ChooseTilemapButton" type="Button" parent="TilemapSelector"]
layout_mode = 0
offset_left = 68.0
offset_top = 32.0
offset_right = 199.0
offset_bottom = 63.0
text = "Choose TileMap"

[node name="TilemapFileDialog" type="FileDialog" parent="TilemapSelector"]
title = "Open a File"
initial_position = 2
size = Vector2i(400, 600)
ok_button_text = "Open"
file_mode = 0

[node name="ChosenTilemapLabel" type="Label" parent="TilemapSelector"]
layout_mode = 0
offset_left = 72.0
offset_top = 72.0
offset_right = 244.0
offset_bottom = 98.0
text = "Selected: "

[node name="RunButton" type="Button" parent="."]
offset_left = 84.0
offset_top = 328.0
offset_right = 196.0
offset_bottom = 364.0
text = "Run"

[node name="MainCamera" parent="." instance=ExtResource("4_hlpi1")]

[node name="SaveFileDialog" type="FileDialog" parent="."]

[connection signal="pressed" from="TilemapSelector/ChooseTilemapButton" to="." method="_on_choose_tilemap_button_pressed"]
[connection signal="file_selected" from="TilemapSelector/TilemapFileDialog" to="." method="_on_tilemap_file_dialog_file_selected"]
[connection signal="pressed" from="RunButton" to="." method="_on_run_button_pressed"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
